--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -36,7 +36,7 @@
                                     <span>|</span></li>
                                 <li>
                                     <i class="fas fa-user"></i>
-                                   <a href="login.html"> Login</a>
+                                   <a href="donorlogin.html"> Login</a>
                                 </li>
                             </ul>
                         </div>
@@ -78,6 +78,9 @@
                                         <li class="nav-item">
                                             <a class="nav-link" href="#contact">Contact US</a>
                                         </li>
+                                         <li class="nav-item">
+                                        <a class="nav-link camp" href="ngocamp.jsp">Latest Camps</a>
+                                       </li>
                                     </ul>
                                 </div>
                             </nav>
@@ -103,9 +106,13 @@
                     <img class="d-block w-100" src="assets/images/slider/slide-02.jpg" alt="First slide">
                     <div class="carousel-caption d-none d-md-block">
                         <h5 class=" bounceInDown">Donate Blood & Save a Life</h5>
-                        <div class=" vbh">
-                            <div class="btn btn-success  bounceInUp"><a href="email.html">Donate Now </a></div>
-                            <div class="btn btn-success  bounceInUp"><a href="search.html">NEED BLOOD</a></div>
+                        <div class=" vbh mt-4">
+                            <div class="btn btn-success  bounceInUp"><a href="email.html">DONATE NOW</a></div>
+                            <div class="btn btn-success  bounceInUp"><a href="search.html">EMERGENCY BLOOD </a></div>
+                        </div>
+                        <div class=" vbh mt-4">
+                            <div class="btn btn-success  bounceInUp"><a href="hospitallogin.html">HOSPITALS </a></div>
+                            <div class="btn btn-success  bounceInUp"><a href="ngo.html">NGO </a></div>
                         </div>
                     </div>
                 </div>
@@ -114,9 +121,13 @@
                     <img class="d-block w-100" src="assets/images/slider/slide-03.jpg" alt="Third slide">
                     <div class="carousel-caption vdg-cur d-none  d-md-block">
                         <h5 class=" bounceInDown">Donate Blood & Save a Life</h5>
-                        <div class=" vbh ">
-                            <div class="btn btn-danger  bounceInUp"><a href="email.html">Donate Now </a> </div>
-                            <div class="btn btn-danger  bounceInUp"><a href="email.html">NEED BLOOD</a></div>
+                     <div class=" vbh mt-4 ">	
+                            <div class="btn btn-success  bounceInUp"><a href="email.html">DONATE NOW</a></div>
+                            <div class="btn btn-success  bounceInUp"><a href="search.html">EMERGENCY BLOOD </a></div>
+                        </div>
+                        <div class=" vbh mt-4">
+                            <div class="btn btn-success  bounceInUp"><a href="hospitallogin.html">HOSPITALS </a></div>
+                            <div class="btn btn-success  bounceInUp"><a href="ngo.html">NGO </a></div>
                         </div>
                     </div>
                 </div>
