update some pages

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -32,7 +32,7 @@
                             <ul class="ulright">
                                 <li>
                                     <i class="fas fa fa-user-plus"></i>
-                                    <a href="email.html">Registration</a>
+                                    <a href="email.jsp">Registration</a>
                                     <span>|</span></li>
                                 <li>
                                     <i class="fas fa-user"></i>
@@ -107,7 +107,7 @@
                     <div class="carousel-caption d-none d-md-block">
                         <h5 class=" bounceInDown">Donate Blood & Save a Life</h5>
                         <div class=" vbh mt-4">
-                            <div class="btn btn-success  bounceInUp"><a href="email.html">DONATE NOW</a></div>
+                            <div class="btn btn-success  bounceInUp"><a href="email.jsp">DONATE NOW</a></div>
                             <div class="btn btn-success  bounceInUp"><a href="search.html">EMERGENCY BLOOD </a></div>
                         </div>
                         <div class=" vbh mt-4">
@@ -122,7 +122,7 @@
                     <div class="carousel-caption vdg-cur d-none  d-md-block">
                         <h5 class=" bounceInDown">Donate Blood & Save a Life</h5>
                      <div class=" vbh mt-4 ">	
-                            <div class="btn btn-success  bounceInUp"><a href="email.html">DONATE NOW</a></div>
+                            <div class="btn btn-success  bounceInUp"><a href="email.jsp">DONATE NOW</a></div>
                             <div class="btn btn-success  bounceInUp"><a href="search.html">EMERGENCY BLOOD </a></div>
                         </div>
                         <div class=" vbh mt-4">
