--- a/src/main/webapp/donorlogin.html
+++ b/src/main/webapp/donorlogin.html
@@ -17,7 +17,7 @@
 
         <input type="submit" value="Login">
     </form>
-    <h1>Don't Have a Donor Account <br><a href="./register.html">Resigter Here</a> </h1>
+    <h1>Don't Have a Donor Account <br><a href="./donorregister.html">Resigter Here</a> </h1>
     
 </body>
 </html>
