--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -30,6 +30,10 @@
                         </div>
                         <div class="col-lg-6 col-md-12">
                             <ul class="ulright">
+                            <li>
+                                 <a href="totaldonor.jsp">Total Registered donors</a>
+                                    <span>|</span></li>
+                                <li>
                                 <li>
                                     <i class="fas fa fa-user-plus"></i>
                                     <a href="email.jsp">Registration</a>
