--- a/src/main/webapp/donorregister.html
+++ b/src/main/webapp/donorregister.html
@@ -6,7 +6,7 @@
 <link  rel="stylesheet" href="css/donorregister.css">
 </head>
 <body>
-<h1>Already Have a Donor Account<br><a href="./login.html">Login here</a></h1>
+<h1>Already Have a Donor Account<br><a href="./donorlogin.html">Login here</a></h1>
      <form action="register" method="post">
      <label>First-Name</label>
      <input  type="text" name="firstname"><br>
